Fixed the glow and detect left shift issues.

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -312,7 +312,7 @@ div.popup h2 {
 	margin-top: 300px;
 }
 
-.glow {
+div.game_cover.glow {
 	-webkit-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
 	-moz-box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
 	box-shadow: 0px 0px 15px 5px rgba(255, 255, 190, .75);
